Website update for January 26 conversation

--- a/app/views/barnabas/index.html.erb
+++ b/app/views/barnabas/index.html.erb
@@ -1,19 +1,14 @@
-<div id="big_top_image">
-  <url style="display:none;">/assets/Cal_Tina_GoldenGate.jpg</url>
-</div>
-
 <div class="row">
   <div class="small-12 large-12 columns">
     <h2><%= page_title %></h2>
-    
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce mattis venenatis dui et ultricies. In at quam nec nulla mollis consectetur. Duis elementum fringilla elementum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur eget augue quis augue pharetra sodales. Donec sed enim id dolor sagittis consectetur. Praesent suscipit mauris sed sapien pretium rhoncus.</p>
-
-    <p>Vivamus tristique molestie nunc eget placerat. Ut eu tristique enim. Donec sapien massa, faucibus id rutrum et, venenatis eget arcu. Pellentesque vel eros risus. Nullam eu eros nec velit consequat tempor. Morbi vehicula fringilla leo a rhoncus. Vestibulum at mauris in massa laoreet interdum. In ullamcorper, sem in pharetra efficitur, leo nulla bibendum mauris, nec aliquam leo risus faucibus metus. In interdum facilisis ligula nec viverra. Sed id massa posuere lectus luctus varius at et erat. Vestibulum vehicula est magna. Nullam laoreet vehicula odio vel aliquet. Curabitur ut arcu metus.</p>
-
-    <p>Sed vitae vestibulum sem, eu consequat elit. Donec libero dui, euismod sed augue eu, sagittis hendrerit enim. Suspendisse congue nisl et purus suscipit convallis. Vivamus libero arcu, semper at fringilla et, convallis ut risus. Vivamus ex felis, vehicula sit amet neque sit amet, vulputate sagittis neque. Donec mollis nunc neque, at scelerisque tellus condimentum vitae. Nam nec augue ornare, porttitor tortor et, vulputate eros. Quisque finibus augue vel auctor iaculis. Proin in leo nisi.</p>
-
-    <p>Fusce malesuada tempus justo sed laoreet. Maecenas sollicitudin eros et posuere porta. Quisque a mattis tortor. Vivamus porttitor faucibus nisl, non luctus metus auctor vitae. Etiam non aliquet dolor, ac tristique massa. Cras imperdiet gravida mi eu congue. Pellentesque fringilla erat sed justo tincidunt, vel pharetra ante lacinia. Mauris pulvinar euismod dui nec elementum. In nec blandit neque, et eleifend sem. Donec eleifend, felis eu luctus sodales, elit ex aliquet sapien, eget posuere risus justo a tellus. Aliquam porttitor urna sed sem auctor finibus.</p>
-
-    <p>Suspendisse volutpat feugiat leo, eget semper nisl molestie in. Nam tempor suscipit purus, at viverra lorem aliquet quis. Morbi tincidunt, ex vel tristique blandit, est mi ultrices eros, a commodo nulla mi at ipsum. Nam ac tincidunt erat, sit amet auctor urna. Vestibulum sit amet facilisis ex. Aenean ut interdum erat. Suspendisse malesuada arcu at sodales mollis. Nulla aliquet semper gravida. Sed id tempus felis. Cras placerat mi eget tortor pulvinar, sit amet consectetur lorem egestas. Nulla pretium, turpis in lobortis porttitor, mi quam dignissim sem, non porta turpis dolor ac elit. Suspendisse pellentesque dui vel odio blandit volutpat. Fusce finibus velit vitae tellus lobortis lacinia.</p> 
+      <p>
+        After 30 years of ministry I can tell you many things NOT to do… They far outweigh the things I could tell you to do in order to finish strong. However, at the top of that list of things to do is take care of your family. That starts by making your spouse a priority! It is heartbreaking today to see pastors lose their marriage while trying to bring hope to others.
+      </p>
+      <p>
+        That’s what the Barnabas Experience is all about. Ministry is all consuming and in today’s culture, there are no boundaries that define personal life and ministry life. Sometimes you just need to ‘get away’ for a weekend and re-focus.
+      </p>
+      <p>
+        During the B.E. weekend, you and your spouse are invited into a home with great hospitality and no responsibility! You will have the opportunity to tour San Francisco and enjoy dinner with a few couples that have been in your same shoes. During the weekend we will have a time where the guys will be together doing ‘guy stuff’ and the ladies will be enjoying a cooking group. (They get to eat everything they cook). There is lots of free time as well just to recalibrate. Sunday morning you will have the opportunity to be in a dynamic service at South Bay Church to worship together. If you desire, we can arrange for you to have a “backstage” moment with the Staff and leaders of the church. 
+      </p>
   </div>
 </div>
