--- a/app/views/layouts/parts/app/_head.html.erb
+++ b/app/views/layouts/parts/app/_head.html.erb
@@ -29,15 +29,12 @@
           </h1>
         </div>
         <div class='large-9 columns topnav'>
-          <ul class='right button-group radius'>
-            <li>
-              <a class='button' href='/'>Home</a>
-            </li>
+          <ul class='right button-group'>
             <li>
               <a class='button' href='/coaching'>Coaching</a>
             </li>
             <li>
-              <a class='button' href='/barnabas'>Barnabas</a>
+              <a class='button' href='/barnabas'>Barnabas Experience</a>
             </li>
             <li>
               <a id="nav_contact" class='button' href='/contact'>Contact</a>
