--- a/app/views/layouts/parts/home/_head.html.erb
+++ b/app/views/layouts/parts/home/_head.html.erb
@@ -29,12 +29,12 @@
           </h1>
         </div>
         <div class='large-9 columns topnav'>
-          <ul class='right button-group radius'>
+          <ul class='right button-group'>
             <li>
               <a class='button' href='/coaching'>Coaching</a>
             </li>
             <li>
-              <a class='button' href='/barnabas'>Barnabas</a>
+              <a class='button' href='/barnabas'>Barnabas Experience</a>
             </li>
             <li>
               <a id="nav_contact" class='button' href='#contact'>Contact</a>
