--- a/app/views/layouts/parts/home/_tripanels.html.erb
+++ b/app/views/layouts/parts/home/_tripanels.html.erb
@@ -11,15 +11,6 @@
       </p>
       <h4>What if we had that attitude in ministry?</h4>
       <p>
-        What if we recognized that we can’t do this alone? God has placed people in our path to help us see, not only the issues we miss in the busyness of ministry, but the potential in us that we seem to overlook or deny.
-      </p>
-      <p>
-        You face the challenge of building and communicating your vision or mission, building your team, resolving issues of conflict, dealing with growth and leading/hiring a staff. All at the same time you are diligently preparing for the weekend.
-      </p>
-      <p>
-        The ReFresh Leadership and Coaching Network is designed to walk beside you to give insight in order to bring more capacity to your leadership. Whether you are in a ‘slump’ or just want to take your leadership up a notch, we are willing to be there and help you through.
-      </p>
-      <p>
         Click <a href="/coaching">here</a> to find out what our coaching network offers and how to get started.
       </p>
     </div>
@@ -33,36 +24,15 @@
         That’s what the Barnabas Experience is all about. Ministry is all consuming and in today’s culture, there are no boundaries that define personal life and ministry life. Sometimes you just need to ‘get away’ for a weekend and re-focus.
       </p>
       <p>
-        During the B.E. weekend, you and your spouse are invited into a home with great hospitality and no responsibility! You will have the opportunity to tour San Francisco and enjoy dinner with a few couples that have been in your same shoes. During the weekend we will have a time where the guys will be together doing ‘guy stuff’ and the ladies will be enjoying a cooking group. (They get to eat everything they cook). There is lots of free time as well just to recalibrate. Sunday morning you will have the opportunity to be in a dynamic service at South Bay Church to worship together. If you desire, we can arrange for you to have a “backstage” moment with the Staff and leaders of the church. 
-      </p>
-      <p>
         Click <a href="/barnabas">here</a> for detail information about the Barnabas Experience and when the next weekend is available.
       </p>
     </div>
     <div class='small-12 large-4 columns'>
       <img src='https://drqkr2smv75b.cloudfront.net/www/images/IMG_0084_small.jpg'>
-      <h4><a href="/leadership/nuggets">Leadership Nuggets</a></h4>
-      <p>
-        This past weekend I had the privilege to attend and event entitled TBC. These three letters stand for Transforming the Bay with Christ. The beauty of this movement is that it was not started by a pastor. That’s right! A business leader here in the San Francisco Bay area began to pull together other Christ-following business leaders and pastors for one purpose: To bring a revival to the bay area!
-      </p>
-      <p>
-        This past weekend there were over 850 people in attendance. That’s phenomenal considering their mission… “To catalyze a Gospel movement in the Bay Area.” Pretty simple huh? Here’s their vision: “Thy will be done on earth as it is in heaven.” One of the things I’ve learned since arriving in the bay area is that there has never been a revival movement for Christ anywhere in this area. I believe it’s beginning to happen!
-      </p>
-      <p>
-        The great missionary/evangelist, Luis Palau was the speaker. He spoke for 20 minutes… (Did I mention, this was not started by a pastor). Here is what Luis said starts a revival, whether it be in a city, church or entire bay area of California… 
-      </p>
-      <p>
-        My prayer is that you grab a hold of these principles and allow the Holy Spirit move in your area: John 14:12-17
-      </p>
+      <h4><a href="/leadership">Leadership Nuggets</a></h4>
       <ol>
-        <li>Dream Great Dreams – Plan Great Plans</li>
-        <ul>
-          <li>Jesus said… “If you continue to trust me, you’ll do greater works than I ever did.”</li>
-        </ul>
-        <li>Pray Great Prayers</li>
-        <ul>
-          <li>“I’ll do whatever you ask in my name.”</li>
-        </ul>
+        <li><a href="/leadership/nuggets/1">TBC Event In San Francisco With Luis Palau</a></li>
+        <li><a href="/leadership/nuggets/2">9 Profits of Praying With Company</a></li>
       </ol>
     </div>
   </div>  
