--- a/app/views/leadership/nuggets.html.erb
+++ b/app/views/leadership/nuggets.html.erb
@@ -2,28 +2,6 @@
   <div class="small-12 large-12 columns">
     <h2><%= page_title %></h2>
     <hr />
-    <h4>January 2015 Leadership Nugget</h4>    
-     <p>
-        This past weekend I had the privilege to attend and event entitled TBC. These three letters stand for Transforming the Bay with Christ. The beauty of this movement is that it was not started by a pastor. That’s right! A business leader here in the San Francisco Bay area began to pull together other Christ-following business leaders and pastors for one purpose: To bring a revival to the bay area!
-      </p>
-      <p>
-        This past weekend there were over 850 people in attendance. That’s phenomenal considering their mission… “To catalyze a Gospel movement in the Bay Area.” Pretty simple huh? Here’s their vision: “Thy will be done on earth as it is in heaven.” One of the things I’ve learned since arriving in the bay area is that there has never been a revival movement for Christ anywhere in this area. I believe it’s beginning to happen!
-      </p>
-      <p>
-        The great missionary/evangelist, Luis Palau was the speaker. He spoke for 20 minutes… (Did I mention, this was not started by a pastor). Here is what Luis said starts a revival, whether it be in a city, church or entire bay area of California… 
-      </p>
-      <p>
-        My prayer is that you grab a hold of these principles and allow the Holy Spirit move in your area: John 14:12-17
-      </p>
-      <ol>
-        <li>Dream Great Dreams – Plan Great Plans</li>
-        <ul>
-          <li>Jesus said… “If you continue to trust me, you’ll do greater works than I ever did.”</li>
-        </ul>
-        <li>Pray Great Prayers</li>
-        <ul>
-          <li>“I’ll do whatever you ask in my name.”</li>
-        </ul>
-      </ol>
+    <%= raw @nugget %>
   </div>
 </div>
