Online giving update

--- a/app/assets/stylesheets/loader.css.scss
+++ b/app/assets/stylesheets/loader.css.scss
@@ -18,5 +18,9 @@
 // Application Styles
 @import "refresh/layout";
 @import "refresh/mobile";
+@import "refresh/controllers/about";
 @import "refresh/controllers/barnabas";
 @import "refresh/controllers/coaching";
+@import "refresh/controllers/contact";
+@import "refresh/controllers/giving";
+@import "refresh/controllers/leadership";
