Cal bio and tri panels update.

--- a/app/views/layouts/parts/home/_tripanels.html.erb
+++ b/app/views/layouts/parts/home/_tripanels.html.erb
@@ -31,9 +31,12 @@
       <img src='https://drqkr2smv75b.cloudfront.net/www/images/IMG_0084_small.jpg'>
       <h4><a href="/leadership">Leadership Nuggets</a></h4>
       <ol>
-        <li><a href="/leadership/nuggets/1">TBC Event In San Francisco With Luis Palau</a></li>
         <li><a href="/leadership/nuggets/2">9 Profits of Praying With Company</a></li>
+        <li><a href="/leadership/nuggets/1">TBC Event In San Francisco With Luis Palau</a></li>
       </ol>
+      <ul>
+        <li style="margin-left: 3px;"><a href="/leadership">Leadership Nugget Archives</a></li>
+      </ul>
     </div>
   </div>  
 </div>
