Update foundation vars and began using topbar for navigation.

--- a/app/assets/stylesheets/lib/_variables.css.scss
+++ b/app/assets/stylesheets/lib/_variables.css.scss
@@ -40,47 +40,48 @@
 //
 // Variables For Foundation
 //
-@import "variables/foundation/globals";
-@import "variables/foundation/typography";
-@import "variables/foundation/code";
-@import "variables/foundation/links";
-@import "variables/foundation/hr";
-@import "variables/foundation/lists";
-@import "variables/foundation/blockquote";
-@import "variables/foundation/acronym";
-@import "variables/foundation/microformat";
-@import "variables/foundation/accordian";
-@import "variables/foundation/alert";
-@import "variables/foundation/grid";
-@import "variables/foundation/breadcrumb";
-@import "variables/foundation/buttons";
-@import "variables/foundation/clearing";
-@import "variables/foundation/dropdown";
-@import "variables/foundation/flex-video";
-@import "variables/foundation/forms";
-@import "variables/foundation/inline-lists";
-@import "variables/foundation/joyride";
-@import "variables/foundation/keystroke";
-@import "variables/foundation/labels";
-@import "variables/foundation/magellan";
-@import "variables/foundation/offcanvas";
-@import "variables/foundation/orbit";
-@import "variables/foundation/pagination";
-@import "variables/foundation/panels";
-@import "variables/foundation/pricing-tables";
-@import "variables/foundation/progress-bar";
-@import "variables/foundation/reveal";
-@import "variables/foundation/side-nav";
-@import "variables/foundation/split-buttons";
-@import "variables/foundation/subnav";
-@import "variables/foundation/switch";
-@import "variables/foundation/tables";
-@import "variables/foundation/tabs";
-@import "variables/foundation/thumbnails";
-@import "variables/foundation/tooltips";
-@import "variables/foundation/icon-bar";
-@import "variables/foundation/visibility";
-@import "variables/foundation/range-slider";
+// @import "variables/foundation/foundation_libvars";
+// @import "variables/foundation/globals";
+// @import "variables/foundation/typography";
+// @import "variables/foundation/code";
+// @import "variables/foundation/links";
+// @import "variables/foundation/hr";
+// @import "variables/foundation/lists";
+// @import "variables/foundation/blockquote";
+// @import "variables/foundation/acronym";
+// @import "variables/foundation/microformat";
+// @import "variables/foundation/accordian";
+// @import "variables/foundation/alert";
+// @import "variables/foundation/grid";
+// @import "variables/foundation/breadcrumb";
+// @import "variables/foundation/buttons";
+// @import "variables/foundation/clearing";
+// @import "variables/foundation/dropdown";
+// @import "variables/foundation/flex-video";
+// @import "variables/foundation/forms";
+// @import "variables/foundation/inline-lists";
+// @import "variables/foundation/joyride";
+// @import "variables/foundation/keystroke";
+// @import "variables/foundation/labels";
+// @import "variables/foundation/magellan";
+// @import "variables/foundation/offcanvas";
+// @import "variables/foundation/orbit";
+// @import "variables/foundation/pagination";
+// @import "variables/foundation/panels";
+// @import "variables/foundation/pricing-tables";
+// @import "variables/foundation/progress-bar";
+// @import "variables/foundation/reveal";
+// @import "variables/foundation/side-nav";
+// @import "variables/foundation/split-buttons";
+// @import "variables/foundation/subnav";
+// @import "variables/foundation/switch";
+// @import "variables/foundation/tables";
+// @import "variables/foundation/tabs";
+// @import "variables/foundation/thumbnails";
+// @import "variables/foundation/tooltips";
+// @import "variables/foundation/icon-bar";
+// @import "variables/foundation/visibility";
+// @import "variables/foundation/range-slider";
 
 //
 // Application Variables
