--- a/app/assets/stylesheets/loader.css.scss
+++ b/app/assets/stylesheets/loader.css.scss
@@ -8,7 +8,7 @@
 @import "compass/layout";
 
 // Foundation
-@import "foundation";
+@import "lib/variables/foundation/foundation_libvars";
 
 // Mixins, Functions
 @import "lib/postlib-functions";
