--- a/app/assets/stylesheets/lib/variables/foundation/_top-bar.scss
+++ b/app/assets/stylesheets/lib/variables/foundation/_top-bar.scss
@@ -3,11 +3,12 @@
 $include-html-top-bar-classes: $include-html-classes;
 
 // Background color for the top bar
-$topbar-bg-color: #333;
+//$topbar-bg-color: #333;
+$topbar-bg-color: $rf-gray;
 $topbar-bg: $topbar-bg-color;
 
 // Height and margin
-$topbar-height: 45px;
+$topbar-height: 90px;
 $topbar-margin-bottom: 0;
 
 // Controlling the styles for the title in the top bar
