--- a/app/views/layouts/parts/home/_head.html.erb
+++ b/app/views/layouts/parts/home/_head.html.erb
@@ -20,7 +20,7 @@
   <body class='<%= controller.controller_name %>'>
     
     <div id="topofpage" class="contain-to-grid"> 
-      <nav class="top-bar" data-topbar role="navigation">
+      <nav class="top-bar" data-topbar role="navigation" data-options="mobile_show_parent_link: false">
         <ul class="title-area">
           <li class="name">
             <a href="/"><img style="height: 75px;" src='https://drqkr2smv75b.cloudfront.net/www/images/ReFresh_Logo_transparent.png'></a>
