--- a/app/views/layouts/parts/home/_tripanels.html.erb
+++ b/app/views/layouts/parts/home/_tripanels.html.erb
@@ -15,7 +15,7 @@
       </p>
     </div>
     <div class='small-12 large-4 columns'>
-      <img src='https://drqkr2smv75b.cloudfront.net/www/images/CalandPastor_SM.jpg'>
+      <img src='https://drqkr2smv75b.cloudfront.net/www/images/CalandPastor_SM.jpg' />
       <h4><a href="/barnabas">Barnabas Experience</a></h4>
       <p>
         After 30 years of ministry I can tell you many things NOT to do… They far outweigh the things I could tell you to do in order to finish strong. However, at the top of that list of things to do is take care of your family. That starts by making your spouse a priority! It is heartbreaking today to see pastors lose their marriage while trying to bring hope to others.
