--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -1,13 +1,34 @@
-<%= render "layouts/parts/home/head" %>
+<!DOCTYPE html> 
+<!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
+<html class="no-js" lang="en" >
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="ReFresh Ministries">
+    <link href="https://drqkr2smv75b.cloudfront.net/shared/images/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon"/>
+    <link rel="apple-touch-icon" href="https://drqkr2smv75b.cloudfront.net/shared/images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="https://drqkr2smv75b.cloudfront.net/shared/images/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="https://drqkr2smv75b.cloudfront.net/shared/images/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="https://drqkr2smv75b.cloudfront.net/shared/images/apple-touch-icon-152x152.png">
+    <title>ReFresh <%= head_page_title %></title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'vendor/modernizr' %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body class='<%= controller.controller_name %>'>
+    
+    <%= yield %>
 
-<%= render "layouts/parts/home/orbit" %>
-
-<%= render "layouts/parts/home/endorsement" %>
-
-<%= render "layouts/parts/home/tripanels" %>
-
-<%= render "layouts/parts/home/contactus" %>
-
-<%= render "layouts/parts/home/about" %>
-
-<%= render "layouts/parts/app/foot" %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        var body = $('body').height();
+        var bodyminus = body - 158;
+        $('#main').css({'min-height' : bodyminus});
+      });
+      $(document).foundation();
+    </script>
+  </body>
+</html>
