--- a/app/views/layouts/parts/app/_foot.html.erb
+++ b/app/views/layouts/parts/app/_foot.html.erb
@@ -10,19 +10,7 @@
             <div class='large-6 small-12 columns'>
               <ul class='inline-list right'>
                 <li>
-                  <a id="nav_top" href='#top'>Top</a>
-                </li>
-                <li>
-                  <a href='/coaching'>Coaching</a>
-                </li>
-                <li>
-                  <a href='/barnabas'>Barnabas Experience</a>
-                </li>
-                <li>
-                  <a href='/contact'>Contact</a>
-                </li>
-                <li>
-                  <a href='/about'>About</a>
+                  <a class="button" id="nav_top" href='#top'>Top of Page</a>
                 </li>
               </ul>
             </div>
