--- a/app/views/layouts/parts/app/_head.html.erb
+++ b/app/views/layouts/parts/app/_head.html.erb
@@ -34,6 +34,7 @@
           <ul class="right">
             <li><a href="/coaching">Coaching</a></li>
             <li><a href="/barnabas">Barnabas Experience</a></li>
+            <li><a href="/leadership">Leadership</a></li>
             <li><a href="/contact">Contact</a></li>
             <li class="has-dropdown">
               <a href="#">About</a>
