Front page design update and cleanup of old code.

--- a/app/assets/stylesheets/loader.scss
+++ b/app/assets/stylesheets/loader.scss
@@ -16,11 +16,6 @@
 @import "lib/classes";
 
 // Application Styles
+@import "refresh/classes";
 @import "refresh/layout";
 @import "refresh/mobile";
-@import "refresh/controllers/about";
-@import "refresh/controllers/barnabas";
-@import "refresh/controllers/coaching";
-@import "refresh/controllers/contact";
-@import "refresh/controllers/giving";
-@import "refresh/controllers/leadership";
