--- a/app/views/layouts/parts/app/_head.html.erb
+++ b/app/views/layouts/parts/app/_head.html.erb
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
-<html lang='en'>
+<!DOCTYPE html> 
+<!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
+<html class="no-js" lang="en" >
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="ReFresh Ministries">
     <link href="https://drqkr2smv75b.cloudfront.net/shared/images/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon"/>
@@ -15,7 +16,6 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'vendor/modernizr' %>
     <%= csrf_meta_tags %>
-    <script src="//use.edgefonts.net/poiret-one:n4:all;source-sans-pro:n2,i2,n3,i3,n4,i4,n6,i6,n7,i7,n9,i9:all;kaushan-script.js"></script>
   </head>
   <body class='<%= controller.controller_name %>'>
     
@@ -41,7 +41,6 @@
               <ul class="dropdown">
                 <li><a href="/about">ReFresh Ministries</a></li>
                 <li><a href="/about/cal">Cal Woods</a></li>
-                <li><a href="/about/ron">Ron Sylvia</a></li>
               </ul>
             </li>
           </ul>
@@ -51,6 +50,5 @@
             <li><a href="#">Left Button</a></li>
           </ul>
         </section>
-        
       </nav>
     </div>
