--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,7 @@
 <%= render "layouts/parts/app/head" %>
 
-<%= render "layouts/parts/app/content" %>
+<div id="main">
+  <%= yield %>
+</div>
 
 <%= render "layouts/parts/app/foot" %>
