--- a/app/views/layouts/parts/app/_foot.html.erb
+++ b/app/views/layouts/parts/app/_foot.html.erb
@@ -10,7 +10,7 @@
             <div class='large-6 small-12 columns'>
               <ul class='inline-list right'>
                 <li>
-                  <a class="button" id="nav_top" href='#top'>Top of Page</a>
+                  <a id="nav_top" href='#top'>Top of Page</a>
                 </li>
               </ul>
             </div>
