--- a/app/views/layouts/parts/home/_head.html.erb
+++ b/app/views/layouts/parts/home/_head.html.erb
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
-<html lang='en'>
+<!DOCTYPE html> 
+<!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
+<html class="no-js" lang="en" >
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="ReFresh Ministries">
     <link href="https://drqkr2smv75b.cloudfront.net/shared/images/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon"/>
@@ -15,7 +16,6 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'vendor/modernizr' %>
     <%= csrf_meta_tags %>
-    <script src="//use.edgefonts.net/poiret-one:n4:all;source-sans-pro:n2,i2,n3,i3,n4,i4,n6,i6,n7,i7,n9,i9:all;kaushan-script.js"></script>
   </head>
   <body class='<%= controller.controller_name %>'>
     
@@ -32,15 +32,15 @@
         <section class="top-bar-section">
           <!-- Right Nav Section -->
           <ul class="right">
-            <li><a href="/coaching">Coaching</a></li>
-            <li><a href="/barnabas">Barnabas Experience</a></li>
-            <li><a id="nav_contact" href="#contact">Contact</a></li>
+            <li><a id="nav_coaching">Coaching</a></li>
+            <li><a id="nav_barnabas">Barnabas Experience</a></li>
+            <li><a id="nav_leadership">Leadership</a></li>
+            <li><a id="nav_contact">Contact</a></li>
             <li class="has-dropdown">
               <a href="#">About</a>
               <ul class="dropdown">
-                <li><a id="nav_about" href="#about">ReFresh Ministries</a></li>
+                <li><a id="nav_about">ReFresh Ministries</a></li>
                 <li><a href="/about/cal">Cal Woods</a></li>
-                <li><a href="/about/ron">Ron Sylvia</a></li>
               </ul>
             </li>
           </ul>
@@ -50,6 +50,5 @@
             <li><a href="#">Left Button</a></li>
           </ul>
         </section>
-        
       </nav>
     </div>
