--- a/app/assets/stylesheets/lib/variables/foundation/_foundation_libvars.scss
+++ b/app/assets/stylesheets/lib/variables/foundation/_foundation_libvars.scss
@@ -1365,7 +1365,7 @@ $topbar-bg-color: $rf-gray;
 $topbar-bg: $topbar-bg-color;
 
 // Height and margin
-$topbar-height: 77px;
+$topbar-height: rem-calc(77);
 // $topbar-margin-bottom: 0;
 
 // Controlling the styles for the title in the top bar
