Begin leadership as database item.

--- a/app/assets/stylesheets/refresh/_classes.scss
+++ b/app/assets/stylesheets/refresh/_classes.scss
@@ -73,3 +73,11 @@
   background-position: center center;
   background-attachment: fixed;
 }
+
+.rf-green{
+  color: $rf-green;
+}
+
+.rf-gray{
+  color: $rf-gray;
+}
