--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -78,7 +78,7 @@
           <div class='row'>
             <div class='large-9 columns'>
               <p>
-                For further information about <a href="/coaching">ReFresh Coaching</a> or the <a href="/barnabas">Barnabas Experience</a>, <a href='#contact' data-reveal-id="contact-modal">contact us</a>.
+                For further information about <a href="/coaching">ReFresh Coaching</a> or the <a href="/barnabas">Barnabas Experience</a>, <a href='#' data-reveal-id="contact-modal">contact us</a>.
               </p>
             </div>
             <div class='large-3 columns'>
