Created admin namespace for nuggets.

--- a/app/views/admin/nuggets/index.html.erb
+++ b/app/views/admin/nuggets/index.html.erb
@@ -18,9 +18,9 @@
           <tr>
             <td><%= nugget.title %></td>
             <td><%= nugget.body %></td>
-            <td><%= link_to 'Show', nugget %></td>
-            <td><%= link_to 'Edit', edit_nugget_path(nugget) %></td>
-            <td><%= link_to 'Destroy', nugget, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to 'Show', admin_nugget_path(nugget) %></td>
+            <td><%= link_to 'Edit', edit_admin_nugget_path(nugget) %></td>
+            <td><%= link_to 'Destroy', admin_nugget_path(nugget), method: :delete, data: { confirm: 'Are you sure?' } %></td>
           </tr>
         <% end %>
       </tbody>
@@ -28,6 +28,6 @@
     
     <br>
     
-    <%= link_to 'New Nugget', new_nugget_path %> 
+    <%= link_to 'New Nugget', new_admin_nugget_path %> 
   </div>
 </div>
