--- a/app/views/admin/nuggets/new.html.erb
+++ b/app/views/admin/nuggets/new.html.erb
@@ -4,6 +4,6 @@
     <hr />    
     <%= render 'form' %>
     
-    <%= link_to 'Back', nuggets_path %>
+    <%= link_to 'Back', admin_nuggets_path %>
   </div>
 </div>
