--- a/app/views/admin/nuggets/show.html.erb
+++ b/app/views/admin/nuggets/show.html.erb
@@ -14,7 +14,7 @@
       <%= @nugget.body %>
     </p>
     
-    <%= link_to 'Edit', edit_nugget_path(@nugget) %> |
-    <%= link_to 'Back', nuggets_path %>
+    <%= link_to 'Edit', edit_admin_nugget_path(@nugget) %> |
+    <%= link_to 'Back', admin_nuggets_path %>
   </div>
 </div>
