--- a/app/views/admin/nuggets/_form.html.erb
+++ b/app/views/admin/nuggets/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@nugget) do |f| %>
+<%= form_for [:admin, @nugget] do |f| %>
   <% if @nugget.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@nugget.errors.count, "error") %> prohibited this nugget from being saved:</h2>
