--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -61,8 +61,9 @@
         </div>
         <div class="small-12 large-6 columns rightside">
           <ol style="margin-top: 45px;">
-            <li><a href="/leadership/nuggets/2">9 Profits of Praying With Company</a></li>
-            <li><a href="/leadership/nuggets/1">TBC Event In San Francisco With Luis Palau</a></li>
+            <% @nuggets.each do |nugget| %>
+            <li><a href="/leadership/nuggets/<%= nugget.id %>"><%= nugget.title %></li>
+            <% end %>
           </ol>
           <p class="text-center"><a class="button" href="/leadership">Leadership Nugget Archives</a></p>
         </div>
