--- a/app/views/admin/home/index.html.erb
+++ b/app/views/admin/home/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="small-12 large-12 columns">
     <h2><%= page_title %></h2>
-    <hr />    
-    <%= render 'form' %>
+    <hr />
+    <p>Administration home area.</p>
   </div>
 </div>
