--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,14 @@
 <%= render "layouts/parts/app/head" %>
 
 <div id="main">
+  <div class="row">
+    <div style="color: red; text-align: center;" id="notice" class="small-12 columns">
+      <% flash.each do |name, msg| %>
+        <%= content_tag :div, msg, :id => "flash_#{name}" %>
+      <% end %>
+    </div>
+  </div>
+
   <%= yield %>
 </div>
 
